--- a/style.css
+++ b/style.css
@@ -33,6 +33,10 @@
   flex-direction: column;
 }
 
+.main.index article {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 820px) {
   .grid .uplot {
     width: 100%;
