--- a/style.css
+++ b/style.css
@@ -1,44 +1,7 @@
-.uplot.chart {
-  width: 100%;
-  overflow: hidden;
-  margin-bottom: 30px;
+body.isLoading .reset,
+body.isLoading .main {
+  display: none;
 }
-.u-wrap {
-  width: 100% !important;
-  height: 0 !important;
-  padding-bottom: calc(100%/3*2);
-}
-.uplot canvas {
-  position: absolute;
-  top: 0; left: 0;
-}
-.u-legend .u-series {
-  display: block;
-}
-.u-value {
-  text-align: center;
-}
-
-.grid {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-}
-.grid .uplot {
-  width: calc(100%/3);
-}
-
-#kitData {
-  display: flex;
-  flex-direction: column;
-}
-
-.main.index article h2 {
-  cursor: pointer;
-}
-
-@media screen and (max-width: 820px) {
-  .grid .uplot {
-    width: 100%;
-  }
+body:not(.isLoading) .loading {
+  display: none;
 }
