--- a/style.css
+++ b/style.css
@@ -5,3 +5,21 @@ body.isLoading .main {
 body:not(.isLoading) .loading {
   display: none;
 }
+
+/* uPlot */
+.chart {margin-bottom: 50px;}
+.u-title, .u-legend {display: none !important;}
+.uplot.chart {
+  width: 100%;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+.u-wrap {
+  width: 100% !important;
+  height: 0 !important;
+  padding-bottom: calc(100%/3*2);
+}
+.uplot canvas {
+  position: absolute;
+  top: 0; left: 0;
+}
