--- a/style.css
+++ b/style.css
@@ -69,6 +69,19 @@ body {
   padding-top: 45vh;
   height: 100vh;
 }
+.loading span {
+  animation-name: blink;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+.loading span:nth-child(2) {animation-delay: .2s;}
+.loading span:nth-child(3) {animation-delay: .4s;}
+@keyframes blink {
+  0% {opacity: 0;}
+  20% {opacity: 1;}
+  100% {opacity: 0;}
+}
 body.isLoading .reset,
 body.isLoading .main {
   display: none;
@@ -76,6 +89,8 @@ body.isLoading .main {
 body:not(.isLoading) .loading {
   display: none;
 }
+
+
 
 /* Logo */
 #logo {
@@ -276,14 +291,14 @@ body:not(.filtered) #reset {display: none;}
   padding-bottom: var(--size-md);
   border-bottom: var(--border-sm) solid var(--colorBase);
 }
-.uplot {
+/* .uplot {
   width: 100% !important;
   margin-bottom: var(--size-xxl);
 }
 .u-wrap {
   width: 100% !important;
   height: 100% !important;
-}
+} */
 .more {
   text-align: center;
   display: block;
